fixed menu overflow

--- a/js/components/TerrafarmApp.css
+++ b/js/components/TerrafarmApp.css
@@ -1,10 +1,12 @@
+@import 'normalize.css/normalize.css';
 @import url(https://fonts.googleapis.com/css?family=Overlock|Simonetta|Patrick+Hand+SC|Life+Savers|Raleway+Dots);
+@import '../shared-styles/typography.css';
 
 html,
 body,
 .perspective { width: 100%; height: 100%; }
 
-.perspective { background: #aaa; position: relative; }
+.perspective { position: relative; }
 
 .container {
   background: #fff;
@@ -20,10 +22,8 @@ body,
 .container::after {
   content: '';
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 0px;
+  top: 0; left: 0;
+  width: 100%; height: 0px;
   opacity: 0;
   background: rgba(0,0,0,0.2);
   /* the transition delay of the height needs to be synced with the container transition time */
@@ -31,16 +31,7 @@ body,
   transition: opacity 0.4s, height 0s 0.4s;
 }
 
-.wrapper {
-  position: relative;
-}
-/* remove */
-.component {
-  margin: 0 auto;
-  width: 60%;
-  text-align: justify;
-  font-size: 1.5em;
-}
+.wrapper { position: relative; overflow: hidden; }
 
 /* Modal view */
 .perspective.modalview {
@@ -75,15 +66,7 @@ body,
   height: auto;
   font-size: 2em;
 }
-/* update */
-.outer-nav.vertical {
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-}
-/* remove */
+
 .outer-nav.horizontal {
   left: 50%;
   width: 75%;
@@ -92,23 +75,11 @@ body,
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
 }
-/* remove */
-.outer-nav.left {
-  left: 25%;
-}
-/* remove */
-.outer-nav.right {
-  right: 25%;
-}
 
-.outer-nav.top {
-  top: 25%;
-}
-/* remove */
-.outer-nav.bottom {
-  bottom: 25%;
-}
-/* update */
+.outer-nav.left { left: 25%; }
+
+.outer-nav.top { top: 25%; }
+
 .outer-nav a {
   display: inline-block;
   white-space: nowrap;
@@ -120,19 +91,11 @@ body,
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
 }
-/* update */
-.outer-nav a:hover {
-  color: #ffdccd;
-}
-/* update */
-.outer-nav.vertical a {
-  display: block;
-}
-/* remove */
-.outer-nav.horizontal a {
-  margin: 15px 20px;
-}
-/* update */
+
+.outer-nav a:hover { color: #ffdccd; }
+
+.outer-nav.horizontal a { margin: 15px 20px; }
+
 .outer-nav a::before {
   display: inline-block;
   font-family: 'typicons';
@@ -148,15 +111,6 @@ body,
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
-/* update */
-.icon-news::before { content: "\e600" }
-.icon-home::before { content: "\e601" }
-.icon-image::before { content: "\e602" }
-.icon-upload::before { content: "\e603" }
-.icon-star::before { content: "\e604" }
-.icon-mail::before { content: "\e605" }
-.icon-lock::before { content: "\e606" }
-.icon-chart-pie::before { content: "\e607" }
 
 /* Effect Move Down */
 .effect-movedown { background: #34495e; }
@@ -186,40 +140,33 @@ body,
   -webkit-transition: -webkit-transform 0.4s, opacity 0.4s;
   transition: transform 0.4s, opacity 0.4s;
 }
-/* update */
 .effect-movedown .outer-nav a:hover { color: #ed8151; }
-/* update */
+
 .effect-movedown.animate .outer-nav a {
   opacity: 1;
   -webkit-transform: translateY(0);
   transform: translateY(0);
 }
-/* update */
 .effect-movedown.animate .outer-nav a:nth-child(2) {
   -webkit-transition-delay: 0.04s;
   transition-delay: 0.04s;
 }
-/* update */
 .effect-movedown.animate .outer-nav a:nth-child(3) {
   -webkit-transition-delay: 0.08s;
   transition-delay: 0.08s;
 }
-/* update */
 .effect-movedown.animate .outer-nav a:nth-child(4) {
   -webkit-transition-delay: 0.12s;
   transition-delay: 0.12s;
 }
-/* update */
 .effect-movedown.animate .outer-nav a:nth-child(5) {
   -webkit-transition-delay: 0.16s;
   transition-delay: 0.16s;
 }
-/* update */
 .effect-movedown.animate .outer-nav a:nth-child(6) {
   -webkit-transition-delay: 0.2s;
   transition-delay: 0.2s;
 }
-/* update */
 .effect-movedown.animate .outer-nav a:nth-child(7) {
   -webkit-transition-delay: 0.24s;
   transition-delay: 0.24s;
@@ -228,25 +175,16 @@ body,
 /* Media Queries */
 @media screen and (max-width: 77em) {
   .outer-nav.top { top: 15%; }
-  .outer-nav.bottom { bottom: 15%;}
 }
 
 @media screen and (max-width: 36.625em), screen and (max-height: 41.75em) {
   .outer-nav.top { top: 5%; }
-  /* remove */
-  .outer-nav.bottom { bottom: 5%; }
-  /* remove */
   .outer-nav.horizontal { font-size: 1.7em; width: 6.2em; }
-  /* remove */
   .outer-nav.horizontal a { display: block; text-align: left; }
 }
 
 @media screen and (max-width: 31em), screen and (max-height: 36.2em) {
-  /* remove */
-  .outer-nav.horizontal,
-  .outer-nav.vertical { font-size: 1.2em; width: 6.8em; }
-  /* remove */
-  .outer-nav.right { right: auto; left: 50%; }
+  .outer-nav.horizontal { font-size: 1.2em; width: 6.8em; }
 }
 
 @media screen and (max-height: 31.6em) {
